Cleaned up .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,16 @@
-**/Lumia.Imaging.Extras/bin/
-**/Lumia.Imaging.Extras/obj/
-**/Lumia.Imaging.Extras-WP81/obj/
-**/Lumia.Imaging.Extras-WP81/bin/
-**/Lumia.Imaging.Extras/packages/
-**/Lumia.Imaging.Extras/bin/
-**/Lumia.Imaging.Extras/packages/
-**/Lumia.Imaging.Extras/obj
-**/Lumia.Imaging.Extras-WP81/packages/
-*.suo
-**/Lumia.Imaging.Extras-WP81/obj
-**/Lumia.Imaging.Extras/obj
-Lumia.Imaging.Extras/Lumia.Imaging.Extras.Tests/bin*
-Lumia.Imaging.Extras/Lumia.Imaging.Extras.Tests/obj*
-Lumia.Imaging.Extras.Sample/Lumia.Imaging.Extras.Sample/Lumia.Imaging.Extras.Sample.Windows/bin
-Lumia.Imaging.Extras.Sample/Lumia.Imaging.Extras.Sample/Lumia.Imaging.Extras.Sample.Windows/obj
-Lumia.Imaging.Extras.Sample/Lumia.Imaging.Extras.Sample/Lumia.Imaging.Extras.Sample.WindowsPhone/bin/
-Lumia.Imaging.Extras.Sample/Lumia.Imaging.Extras.Sample/Lumia.Imaging.Extras.Sample.WindowsPhone/obj/
-Lumia.Imaging.Extras.Sample/packages/
-WRL/Lumia.Imaging.Extras.WRL/dlldata.c
-**/Debug/
-**/Release/
-WRL/Lumia.Imaging.Extras.WRL/*.winmd
-WRL/Lumia.Imaging.Extras.WRL/*_h.h
-WRL/Lumia.Imaging.Extras.WRL/*_i.c
-WRL/Lumia.Imaging.Extras.WRL/*_p.c
-Lumia.Imaging.Extras/obj/
-Lumia.Imaging.Extras-WP81/obj/
-WRL/Lumia.Imaging.Extras.WRL.WindowsPhone/*.c
-WRL/Lumia.Imaging.Extras.WRL.WindowsPhone/*.h
-WRL/Lumia.Imaging.Extras.WRL.WindowsPhone/*.winmd
-**_p.c
+.nuget/
+**.pfx
+**.sdf
+**.opensdf
+**.suo
+**_h.h
 **_i.c
+**_p.c
 **/dlldata.c
 **/Lumia Imaging SDK.chm
+**/bin
+**/Debug/
+**/obj
+**/ipch
+**/Release/
 **/packages/*/*
-ipch/
-**.sdf
-.nuget/
-**.opensdf
-Native/Samples/CustomWRL/**_h.h
-Native/Samples/CustomWRL/**/*_h.h
