--- a/Tests/Lumia.Imaging.Extras.Tests/Lumia.Imaging.Extras.Tests.WindowsPhone/Lumia.Imaging.Extras.Tests.WindowsPhone.csproj
+++ b/Tests/Lumia.Imaging.Extras.Tests/Lumia.Imaging.Extras.Tests.WindowsPhone/Lumia.Imaging.Extras.Tests.WindowsPhone.csproj
@@ -133,10 +133,10 @@
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
     <Error Condition="!Exists('$(SolutionDir)\.nuget\NuGet.targets')" Text="$([System.String]::Format('$(ErrorText)', '$(SolutionDir)\.nuget\NuGet.targets'))" />
-    <Error Condition="!Exists('..\..\..\packages\LumiaImagingSDK.2.0.101-beta\build\wpa81\LumiaImagingSDK.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\..\packages\LumiaImagingSDK.2.0.101-beta\build\wpa81\LumiaImagingSDK.targets'))" />
+    <Error Condition="!Exists('..\..\..\packages\LumiaImagingSDK.2.0.170-alpha\build\wpa81\LumiaImagingSDK.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\..\packages\LumiaImagingSDK.2.0.170-alpha\build\wpa81\LumiaImagingSDK.targets'))" />
   </Target>
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
-  <Import Project="..\..\..\packages\LumiaImagingSDK.2.0.101-beta\build\wpa81\LumiaImagingSDK.targets" Condition="Exists('..\..\..\packages\LumiaImagingSDK.2.0.101-beta\build\wpa81\LumiaImagingSDK.targets')" />
+  <Import Project="..\..\..\packages\LumiaImagingSDK.2.0.170-alpha\build\wpa81\LumiaImagingSDK.targets" Condition="Exists('..\..\..\packages\LumiaImagingSDK.2.0.170-alpha\build\wpa81\LumiaImagingSDK.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
