--- a/Native/Samples/CustomWRL/CustomWRL.WindowsPhone/CustomWRL.WindowsPhone.vcxproj.filters
+++ b/Native/Samples/CustomWRL/CustomWRL.WindowsPhone/CustomWRL.WindowsPhone.vcxproj.filters
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="..\CustomWRL.Windows\module.cpp" />
-    <ClCompile Include="..\CustomWRL.Windows\pch.cpp" />
+    <ClCompile Include="module.cpp" />
+    <ClCompile Include="pch.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\CustomWRL.Windows\pch.h" />
-    <ClInclude Include="..\CustomWRL.Windows\targetver.h" />
+    <ClInclude Include="pch.h" />
+    <ClInclude Include="targetver.h" />
   </ItemGroup>
 </Project>
