--- a/Native/Samples/CustomWRL/CustomWRL.Shared/CustomWRL.Shared.vcxitems.filters
+++ b/Native/Samples/CustomWRL/CustomWRL.Shared/CustomWRL.Shared.vcxitems.filters
@@ -1,5 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <ItemGroup>
+    <Filter Include="CustomFilter">
+      <UniqueIdentifier>{7f1a90d5-7170-4c54-9886-33471db8fa85}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="CustomEffect">
+      <UniqueIdentifier>{55b656a5-3ec4-4d09-a15c-ec0b7b2ed725}</UniqueIdentifier>
+    </Filter>
+  </ItemGroup>
   <ItemGroup>
     <ClCompile Include="$(MSBuildThisFileDirectory)EmptyCustomFilter.cpp" />
     <ClCompile Include="$(MSBuildThisFileDirectory)RgbGainCustomFilter.cpp" />
@@ -21,10 +29,5 @@
   <ItemGroup>
     <Midl Include="$(MSBuildThisFileDirectory)EmptyCustomFilter.idl" />
     <Midl Include="$(MSBuildThisFileDirectory)RgbGainCustomFilter.idl" />
-  </ItemGroup>
-  <ItemGroup>
-    <Filter Include="CustomFilter">
-      <UniqueIdentifier>{e34f606a-e2d7-4693-bb38-1a01f4ce4776}</UniqueIdentifier>
-    </Filter>
   </ItemGroup>
 </Project>
